# GFOLD

./: Dependency_install_on_multicom.md  README.md  Readme  configure.pl  setup_database.pl
GFOLD_v0.1/: CMakeCache.txt  INSTALL  Makefile  cmake_install.cmake
GFOLD_v0.1/examples/: GFOLD.py  GFOLD_bin  GFOLD_v0.2.py.20190429  GFOLD_withCONFOLD_function.py.20190502  simple.py  symmetry.cpp
GFOLD_v0.1/examples/Sucessed_cases_codes_backup/: GFOLD_v0.9_1A1X-A.py.20190515  GFOLD_v0.9_1A1X-A.py.20190519  GFOLD_v0.9_1A1X-A.py.20190519_v2  GFOLD_v0.9_1A1X-A.py.20190519_v3  GFOLD_v0.9_1A9N-D.py.20190519  GFOLD_v0.9_1AHO-A.py.20190519  GFOLD_v0.9_1ALY-A.py.20190521_V4  GFOLD_v0.9_1AYO-B.py.20190515  GFOLD_v0.9_1AYO-B.py.20190519  GFOLD_v0.9_1B0B-A.py.20190519  GFOLD_v0.9_1BXY-B.py.2019051921  GFOLD_v0.9_1BXY-B.py.20190519_v2  GFOLD_v0.9_1BXY-B.py.20190519_v3  GFOLD_v0.9_1BXY-B.py.20190521_v2  GFOLD_v0.9_1BYR-A.py.20190519  GFOLD_v0.9_1BYR-A.py.20190521_v3  GFOLD_v0.9_1BYR-A.py.20190521_v4
GFOLD_v0.1/src/: Makefile  cmake_install.cmake
Jie_development_backup/GFOLD_v0.1/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  configure.ac
Jie_development_backup/GFOLD_v0.1/examples/: CMakeLists.txt  GFOLD_bin_example.cpp  GFOLD_v0.0.py.20190428  GFOLD_v0.1.py.20190429  GFOLD_v0.5.includeCONFOLDss.py.20190502  Makefile  cmake_install.cmake  simple  simple.cpp
Jie_development_backup/GFOLD_v0.1/examples/Sucessed_cases_codes_backup/: GFOLD_v0.9_1AHO-A.py.20190519_v2  GFOLD_v0.9_1ALY-A.py.20190522_V5  GFOLD_v0.9_1BYR-A.py.20190513
Jie_development_backup/GFOLD_v0.1/src/: CMakeLists.txt
Jie_development_backup/scripts/: N5_format_distmap2distrr.pl  N6_distance_error.pl  N7_get_phi_psi_from_pdb.pl  P1_run_GFOLD_batch.pl  P1_run_GFOLD_batch_example.pl  P1_run_GFOLD_batch_v1.1_20190511.pl  P1_run_pdb2dist_batch.pl  format_distance_restraints.pl
Raj_development/scritps/: P1_run_GFOLD_parallel.py
Raj_development/scritps/programs/: CheckFileExists.py  FileReader.py  FileReaderSample.py  HelloWorld.py  MakeFolders.py  PythonWithShellCommand.py  mainTestScript.py  mainTestScript_lewis.py  outReaderShell.py  parallelTaskGiver.py  parallelTaskGiver_Jie.py  removeFolder.py
examples/: T0_run_GFOLD-1ALY-A.sh  T0_run_GFOLD-1AYO-B.sh  T0_run_GFOLD-1BYR-A.sh  T0_run_GFOLD-1CCW-C.sh  T0_run_GFOLD-1G5T-A.sh
installation/: configure_list
installation/GFOLD_manually_install_files/: P10_install_gmp-4.3.2.sh  P11_install_mpfr-2.4.2.sh  P12_install_CGAL-4.8.1.sh  P13_install_fftw-3.3.4.sh  P14_install_opencv.sh  P15_install_imp-2.6.2.sh  P1_install_boost.sh  P2_install_OpenBlas.sh  P2_install_scwrl4.sh  P3_install_cmake_2.8.sh  P4_install_cmake_3.5.sh  P5_install_blas-3.6.0.sh  P6_install_lapack-3.4.1.sh  P7_install_zlib-1.2.8.sh  P8_install_hdf5-1.8.16.sh  P9_install_gmp-4.3.2.sh  P9_install_gsl-2.1.sh
installation/GFOLD_test_codes/: .T0_run_GFOLD-1ALY-A.sh.default  .T0_run_GFOLD-1AYO-B.sh.default  .T0_run_GFOLD-1BYR-A.sh.default  .T0_run_GFOLD-1G5T-A.sh.default  T0_run_GFOLD-1ALY-A.sh  T0_run_GFOLD-1BYR-A.sh  T0_run_GFOLD-1G5T-A.sh
progress_slides/: progress_results_20190510.xlsx
scripts/: .P1_evaluate_GFOLD_batch.pl.default  .P1_run_GFOLD_batch.pl.default  N1_split_fasta.pl  N2_visualize_pdb_withSuperimpose.pl  N2_visualize_pdb_withSuperimpose_batch.pl  N2_visualize_pdb_withSuperimpose_batch_forcasp_DFOLD.pl  N2_visualize_pdb_withSuperimpose_batch_forcasp_GFOLD.pl  N4_format_distmap2distrr_batch.pl  N4_format_distmap2restraints.pl  N4_format_distmap2restraints_batch.pl  P1_evaluate_GFOLD_batch.pl  P1_run_DFOLD_batch.pl  P1_run_GFOLD_batch.pl  P1_run_GFOLD_batch_v1.0_20190511.pl  P1_run_GFOLD_batch_v1.0_20190519.pl  P1_run_GFOLD_batch_v1.0_20190521.pl  P1_run_GFOLD_batch_v2.0_20190511.pl  P1_run_dist2restraints_batch.pl  confold_ss_restraints.pl  format_dihedral_restraints.pl  format_hbond_restraints.pl  format_ssnoe_restraints.pl  pdb2dist_casp.pl  pdb2fasta.pl  superimpose_two_pdb.pl
src/: GFOLD.py
